@startuml
skinparam classAttributeIconSize 0
    frame DontLoad{
        package Player {
            object inheritPlayer
            object ClickEventHandler
            object GameDataCollection{
                - eventFlagList : bool[] 
                - itemList : List<enum itemList> 
                - selectedItem : String
            }
            object GameManager
        }
        'アイテムUI
        package ItemUICanvas{
            object inheritItemCanvas
            object itemListController{
                --
                + pushItem(Name : String)
                + popItem (Name : String)
            }
        }
        package ItemSlot1{
            object ClickItemListener1
        }
        package ItemSlot2{
            object ClickItemListener2
        }
        package ItemSlot3{
            object ClickItemListener3
        }
        package ItemSlot4{
            object ClickItemListener4
        }
        package RightArrow{}
        package LeftArrow{}
    }

    frame map{
        package BackGround{
            object InitStage
        }
        package EventImage2{
            object ClickEventListener2
            note bottom: アイテム取得
        }
    }

    frame enum{
        enum itemList
        enum eventList
        enum TextList
        enum SceneList
    }
    frame staticClass{
        class TextCollection{
            +{static} TextList: List<String>
        }
    }

    ItemUICanvas -[#Green]+ ItemSlot1
    ItemUICanvas -[#Green]+ ItemSlot2
    ItemUICanvas -[#Green]+ ItemSlot3
    ItemUICanvas -[#Green]+ ItemSlot4
    ItemUICanvas -[#Green]+ RightArrow
    ItemUICanvas -[#Green]+ LeftArrow

    ClickEventHandler -[#Black]--  ClickItemListener1
    ClickEventHandler -[#Black]--  ClickItemListener2
    ClickEventHandler -[#Black]--  ClickItemListener3
    ClickEventHandler -[#Black]--  ClickItemListener4

    ClickEventHandler -[#Black]-- ClickEventListener2



    GameDataCollection --- eventList
    GameDataCollection --- itemList


    itemListController --- GameDataCollection

    ClickEventListener2 -- GameDataCollection
    ClickEventListener2 --- itemListController
    InitStage -- GameDataCollection


    GameManager -- GameDataCollection

@enduml